# JavaRush-PyWizards

M2/L02 HTML/: about.html  index.html
M2/L03 HTML/: about.html  blog.html  index.html  post.html  services.html
M2/L04 CSS/: about.html  index.html  services.html
M2/L05 Bootstrap/: index.html  post.html  services.html
M2/L06 JS-1/: index.html  index.js  script1.js  script2.js  script3.js  script4.js  script5.js  script6.js
M2/L07 JS-2/: index.html  step01.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js
M2/L08 JS-3/: index.html  step1.js  step10.js  step11.js  step12.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js  step9.js
M2/L09 JS-4/: step.py  step1.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js
M2/L10 Project-1/: app.py
M2/L12 git 1/: README.md
M2/L13 git 2/: README.md
M2/L14 Docker-1/: Dockerfile  app.py
M2/L15 Docker-2/: Dockerfile  README.md
M2/L16 Docker-3/: README.md  app.py  history_cmd.txt
M2/L17 Docker compose/: history.txt
M2/L19 Poetry/: README.md  history.txt
M2/L19 Poetry/new_project/: pyproject.toml  req.txt
M2/L22 Project-3/: README.md  old_docker-compose.yml
M2/L23 SQL 01/: README.md  docker-compose.yml
M2/L24 SQL 02/: step1.sql  step2.sql  step3.sql  step4.sql  step5.sql  step6.sql
M2/L25 SQL 03/: step1.sql  step2.sql  tables.xlsx
M2/L26 SQL 04/: step1.sql
M2/L27 SQL 05 CREATE/: step1.sql  step2.sql
M2/L28 SQL 06 CRUD/: step1.sql
M2/L29 SQL 07 FUNCTION/: step1.sql
M2/L30 SQL python+psycopg2/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step08.py
M3/lesson.01_Hello_Django/: README.md
M3/lesson.02_Django_ORM/: README.md  db.sqlite3
M3/lesson.04_Django_Templates/: README.md  db.sqlite3  pyproject.toml
M3/lesson.05_Django_Templates_2/: db.sqlite3
M3/lesson.06_New_project_Store/: db.sqlite3
M3/lesson.07_Django_Admin/: db.sqlite3
M3/lesson.08_Django_Forms/: db.sqlite3  pyproject.toml
M3/lesson.09_Django_ModelForms-edit-delete/: db.sqlite3
M3/lesson.10_Django_CBV/: README.md  history_orm_command.txt  pyproject.toml
M3/lesson.10_Django_CBV/blog_app/: models.py  urls.py
M3/lesson.10_Django_CBV/blog_app/migrations/: 0002_alter_post_options_post_image_and_more.py  0003_post_views_alter_post_image.py
M3/lesson.10_Django_CBV/blog_app/templates/blog_app/: post_detail.html
M3/lesson.10_Django_CBV/fixtures/: blog_app_all_data1.json
M3/lesson.11_Django_tests/: db.sqlite3
M3/lesson.12_Django_CustomUser/: README.md  db.sqlite3  (+1 more)
M3/lesson.14_Django_Celery&Redis/: README.md  db.sqlite3  pyproject.toml
M3/lesson.14_Django_Celery&Redis/blog_app/: admin.py  tasks.py  views.py
M3/lesson.14_Django_Celery&Redis/blog_app/templates/blog_app/: about.html  index.html
M3/lesson.14_Django_Celery&Redis/config/: celery.py  settings.py
M3/lesson.14_Django_Celery&Redis/fixtures/: blog_app_all_data2.json
M3/lesson.19_DRF_filters&docs/: pyproject.toml
M3/lesson.19_DRF_filters&docs/blog_app/: admin.py  tasks.py
M3/lesson.19_DRF_filters&docs/blog_app/api/: paginations.py  serializers.py  urls.py
M3/lesson.19_DRF_filters&docs/blog_app/management/commands/: gen_test_data.py
M3/lesson.19_DRF_filters&docs/blog_app/migrations/: 0001_initial.py
M3/lesson.19_DRF_filters&docs/blog_app/templates/blog_app/: author_posts.html  post_add.html  post_list.html
M3/lesson.19_DRF_filters&docs/config/: settings.py  urls.py
M3/lesson.19_DRF_filters&docs/user_app/templates/user_app/: logout.html
M4/lesson.06_SQLAlchemy_crud/: movies.db  pyproject.toml  temp_3.py  temp_8_create_read.py  temp_9_update_delete.py
M4/lesson.06_SQLAlchemy_crud/db/: session.py
M4/lesson.13_Project_newsbot_structure/: newsbot_architecture.md  pyproject.toml
M4/lesson.13_Project_newsbot_structure/app/: schemas.py
(+221 files in other folders)
